--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -3,7 +3,7 @@
 ######################################
 
 kafka.eagle.zk.cluster.alias=cluster1
-#cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
+cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
 cluster1.zk.list=127.0.0.1:2181
 #cluster2.zk.list=vmn2:2181
 #cluster3.zk.list=vmn3:2181
@@ -23,7 +23,7 @@ kafka.eagle.webui.port=8048
 # kafka offset storage
 ######################################
 cluster1.kafka.eagle.offset.storage=kafka
-#cluster2.kafka.eagle.offset.storage=kafka
+cluster2.kafka.eagle.offset.storage=kafka
 #cluster3.kafka.eagle.offset.storage=kafka
 cluster4.kafka.eagle.offset.storage=kafka
 
@@ -90,6 +90,6 @@ kafka.eagle.sasl.mechanism=PLAIN
 #kafka.eagle.password=123456
 
 kafka.eagle.driver=org.sqlite.JDBC
-kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-egale/kafka-eagle-web/src/main/resources/db/ke.db
+kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-eagle/kafka-eagle-web/src/main/resources/db/ke.db
 kafka.eagle.username=root
 kafka.eagle.password=root
