增加企业微信发送配置

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -61,7 +61,12 @@ kafka.eagle.im.wechat.touser=
 kafka.eagle.im.wechat.toparty=
 kafka.eagle.im.wechat.totag=
 kafka.eagle.im.wechat.agentid=
-
+#################
+#企业微信
+kafka.eagle.im.qyapi.enable=true
+kafka.eagle.im.qyapi.agentid=
+kafka.eagle.im.qyapi.tokenUrl=
+kafka.eagle.im.qyapi.emessageUrl=
 ######################################
 # alarm user configure,
 # like smartloli@gmail.org
