--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
 	<properties>
 		<project.version>1.3.0</project.version>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jackson.version>2.9.6</jackson.version>
 	</properties>
 
 	<modules>
