fixed #151 #154 & fixed wechat send api

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -49,6 +49,7 @@ kafka.eagle.mail.server.port=25
 #kafka.eagle.im.dingding.url=https://oapi.dingtalk.com/robot/send?access_token=
 
 #kafka.eagle.im.wechat.enable=true
+#kafka.eagle.im.wechat.token=https://qyapi.weixin.qq.com/cgi-bin/gettoken?corpid=xxx&corpsecret=xxx
 #kafka.eagle.im.wechat.url=https://qyapi.weixin.qq.com/cgi-bin/message/send?access_token=
 #kafka.eagle.im.wechat.touser=
 #kafka.eagle.im.wechat.toparty=
@@ -63,9 +64,12 @@ kafka.eagle.topic.token=keadmin
 ######################################
 # kafka sasl authenticate
 ######################################
-kafka.eagle.sasl.enable=false
-kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-kafka.eagle.sasl.mechanism=PLAIN
+cluster1.kafka.eagle.sasl.enable=false
+cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+cluster1.kafka.eagle.sasl.mechanism=PLAIN
+cluster2.kafka.eagle.sasl.enable=false
+cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+cluster2.kafka.eagle.sasl.mechanism=PLAIN
 
 ######################################
 # kafka jdbc driver address
