添加Email发送支持SSL

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -36,6 +36,7 @@ kafka.eagle.sql.topic.records.max=5000
 # alarm email configure
 ######################################
 kafka.eagle.mail.enable=false
+kafka.eagle.mail.ssl.enable=false
 kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@163.com
 kafka.eagle.mail.password=mqslimczkdqabbbh
