--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -41,8 +41,8 @@ kafka.eagle.sql.topic.records.max=5000
 ######################################
 # alarm email configure
 ######################################
-kafka.eagle.mail.enable=false
-kafka.eagle.mail.sa=alert_sa@126.com
+kafka.eagle.mail.enable=true
+kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@126.com
 kafka.eagle.mail.password=smartloli
 kafka.eagle.mail.server.host=smtp.126.com
