[#163, #172][Kafka SQL] fixed query topic data

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper&kafka cluster list
 ######################################
 
-kafka.eagle.zk.cluster.alias=cluster1,cluster2
+kafka.eagle.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
 cluster2.zk.list=dn1:2181
 #cluster3.zk.list=vmn3:2181
@@ -41,7 +41,7 @@ kafka.eagle.sql.topic.records.max=5000
 ######################################
 # alarm email configure
 ######################################
-kafka.eagle.mail.enable=true
+kafka.eagle.mail.enable=false
 kafka.eagle.mail.sa=alert_sa@126.com
 kafka.eagle.mail.username=alert_sa@126.com
 kafka.eagle.mail.password=smartloli
