[Kafka Config] modify kafka client console log

--- a/kafka-eagle-common/src/main/resources/log4j.properties
+++ b/kafka-eagle-common/src/main/resources/log4j.properties
@@ -28,3 +28,14 @@ log4j.appender.SERROR.DatePattern='.'yyyy-MM-dd
 log4j.appender.SERROR.layout=org.apache.log4j.PatternLayout
 log4j.appender.SERROR.layout.ConversionPattern=[%d{yyyy-MM-dd HH\:mm\:ss}] %c{1}.%t - %-5p - %m%n 
 log4j.appender.SERROR.Encoding=UTF-8
+
+##############################
+# Disable kafka metrics log
+##############################
+log4j.logger.org.apache.kafka.common.metrics.Metrics=OFF
+log4j.logger.org.apache.kafka.clients.FetchSessionHandler=OFF
+log4j.logger.org.apache.kafka.clients.consumer.internals.Fetcher=OFF
+log4j.logger.org.apache.kafka.clients.consumer.internals.AbstractCoordinator=OFF
+log4j.logger.org.apache.kafka.clients.consumer.internals.ConsumerCoordinator=OFF
+log4j.logger.org.springframework.kafka.listener.KafkaMessageListenerContainer=OFF
+log4j.logger.org.springframework.kafka.listener.KafkaMessageListenerContainer$ListenerConsumer=OFF
