[#180] [Kafka Topic] add producer topic logsize

--- a/kafka-eagle-common/src/main/resources/log4j.properties
+++ b/kafka-eagle-common/src/main/resources/log4j.properties
@@ -32,6 +32,9 @@ log4j.appender.SERROR.Encoding=UTF-8
 ##############################
 # Disable kafka metrics log
 ##############################
+log4j.logger.org.apache.kafka.clients.consumer.ConsumerConfig=OFF
+log4j.logger.org.apache.kafka.clients.producer.ProducerConfig=OFF
+log4j.logger.org.apache.kafka.clients.admin.AdminClientConfig=OFF
 log4j.logger.org.apache.kafka.common.metrics.Metrics=OFF
 log4j.logger.org.apache.kafka.clients.FetchSessionHandler=OFF
 log4j.logger.org.apache.kafka.clients.consumer.internals.Fetcher=OFF
