--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -77,5 +77,5 @@ cluster2.kafka.eagle.sasl.mechanism=PLAIN
 kafka.eagle.driver=org.sqlite.JDBC
 kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
 kafka.eagle.username=root
-kafka.eagle.password=smartloli
+kafka.eagle.password=www.kafka-eagle.org
 
