--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -80,12 +80,12 @@ cluster2.kafka.eagle.sasl.mechanism=PLAIN
 ######################################
 # kafka jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke3?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-kafka.eagle.username=root
-kafka.eagle.password=123456
-
-#kafka.eagle.driver=org.sqlite.JDBC
-#kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-eagle/kafka-eagle-web/src/main/resources/db/ke.db
+#kafka.eagle.driver=com.mysql.jdbc.Driver
+#kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke3?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #kafka.eagle.username=root
-#kafka.eagle.password=root
+#kafka.eagle.password=123456
+
+kafka.eagle.driver=org.sqlite.JDBC
+kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-eagle/kafka-eagle-web/src/main/resources/db/ke.db
+kafka.eagle.username=root
+kafka.eagle.password=root
