--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -67,9 +67,12 @@ kafka.eagle.topic.token=keadmin
 cluster1.kafka.eagle.sasl.enable=false
 cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster1.kafka.eagle.sasl.mechanism=PLAIN
+cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="kafka-eagle";
+
 cluster2.kafka.eagle.sasl.enable=false
 cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster2.kafka.eagle.sasl.mechanism=PLAIN
+cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="kafka-eagle";
 
 ######################################
 # kafka jdbc driver address
