modify system config

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -3,8 +3,8 @@
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
-cluster2.zk.list=dn1:2181
-#cluster3.zk.list=vmn3:2181
+cluster2.zk.list=127.0.0.1:2181/plain
+cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=vmn4:2181
 
 ######################################
@@ -75,13 +75,13 @@ kafka.eagle.topic.token=keadmin
 ######################################
 # kafka sasl authenticate
 ######################################
-cluster1.kafka.eagle.sasl.enable=false
+cluster1.kafka.eagle.sasl.enable=true
 cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster1.kafka.eagle.sasl.mechanism=PLAIN
-cluster1.kafka.eagle.sasl.jaas.config=
+cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
+cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
 cluster1.kafka.eagle.sasl.client.id=
 
-cluster2.kafka.eagle.sasl.enable=false
+cluster2.kafka.eagle.sasl.enable=true
 cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster2.kafka.eagle.sasl.mechanism=PLAIN
 cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
