--- a/kafka-eagle-web/src/main/resources/kms/conf/catalina.properties
+++ b/kafka-eagle-web/src/main/resources/kms/conf/catalina.properties
@@ -115,8 +115,10 @@ aspectj*.jar,\
 bootstrap.jar,\
 catalina-ant.jar,\
 catalina-ha.jar,\
+catalina-jmx-remote.jar,\
 catalina-storeconfig.jar,\
 catalina-tribes.jar,\
+catalina-ws.jar,\
 catalina.jar,\
 cglib-*.jar,\
 cobertura-*.jar,\
@@ -170,7 +172,11 @@ tagsoup-*.jar,\
 tomcat-api.jar,\
 tomcat-coyote.jar,\
 tomcat-dbcp.jar,\
-tomcat-i18n-*.jar,\
+tomcat-i18n-en.jar,\
+tomcat-i18n-es.jar,\
+tomcat-i18n-fr.jar,\
+tomcat-i18n-ja.jar,\
+tomcat-i18n-ru.jar,\
 tomcat-jdbc.jar,\
 tomcat-jni.jar,\
 tomcat-juli-adapters.jar,\
