add producer and consumer history bscreen

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -28,7 +28,7 @@ cluster4.kafka.eagle.offset.storage=kafka
 ######################################
 # enable kafka metrics
 ######################################
-kafka.eagle.metrics.charts=true
+kafka.eagle.metrics.charts=false
 
 kafka.eagle.sql.fix.error=false
 
