--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -90,12 +90,12 @@ cluster2.kafka.eagle.sasl.client.id=
 ######################################
 # kafka jdbc driver address
 ######################################
-#kafka.eagle.driver=com.mysql.jdbc.Driver
-#kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#kafka.eagle.username=root
-#kafka.eagle.password=123456
-
-kafka.eagle.driver=org.sqlite.JDBC
-kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
+kafka.eagle.driver=com.mysql.jdbc.Driver
+kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 kafka.eagle.username=root
-kafka.eagle.password=root
+kafka.eagle.password=123456
+
+#kafka.eagle.driver=org.sqlite.JDBC
+#kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
+#kafka.eagle.username=root
+#kafka.eagle.password=root
