add ksql history

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -22,39 +22,17 @@ cluster1.kafka.eagle.offset.storage=kafka
 cluster2.kafka.eagle.offset.storage=zk
 
 ######################################
-# enable kafka metrics
+# kafka metrics, 30 days by default
 ######################################
 kafka.eagle.metrics.charts=false
-kafka.eagle.sql.fix.error=false
+kafka.eagle.metrics.retain=30
+
 
 ######################################
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
-
-######################################
-# alarm email configure
-######################################
-kafka.eagle.mail.enable=false
-kafka.eagle.mail.sa=alert_sa@163.com
-kafka.eagle.mail.username=alert_sa@163.com
-kafka.eagle.mail.password=mqslimczkdqabbbh
-kafka.eagle.mail.server.host=smtp.163.com
-kafka.eagle.mail.server.port=25
-
-######################################
-# alarm im configure
-######################################
-#kafka.eagle.im.dingding.enable=true
-#kafka.eagle.im.dingding.url=https://oapi.dingtalk.com/robot/send?access_token=
-
-#kafka.eagle.im.wechat.enable=true
-#kafka.eagle.im.wechat.token=https://qyapi.weixin.qq.com/cgi-bin/gettoken?corpid=xxx&corpsecret=xxx
-#kafka.eagle.im.wechat.url=https://qyapi.weixin.qq.com/cgi-bin/message/send?access_token=
-#kafka.eagle.im.wechat.touser=
-#kafka.eagle.im.wechat.toparty=
-#kafka.eagle.im.wechat.totag=
-#kafka.eagle.im.wechat.agentid=
+kafka.eagle.sql.fix.error=false
 
 ######################################
 # delete kafka topic token
@@ -66,19 +44,29 @@ kafka.eagle.topic.token=keadmin
 ######################################
 cluster1.kafka.eagle.sasl.enable=false
 cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster1.kafka.eagle.sasl.mechanism=PLAIN
-cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="kafka-eagle";
+cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
+cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="kafka" password="kafka-eagle";
+cluster1.kafka.eagle.sasl.client.id=
 
 cluster2.kafka.eagle.sasl.enable=false
 cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster2.kafka.eagle.sasl.mechanism=PLAIN
-cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="kafka-eagle";
+cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="kafka-eagle";
+cluster2.kafka.eagle.sasl.client.id=
 
 ######################################
-# kafka jdbc driver address
+# kafka sqlite jdbc driver address
 ######################################
 kafka.eagle.driver=org.sqlite.JDBC
 kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
 kafka.eagle.username=root
 kafka.eagle.password=www.kafka-eagle.org
+
+######################################
+# kafka mysql jdbc driver address
+######################################
+#kafka.eagle.driver=com.mysql.jdbc.Driver
+#kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#kafka.eagle.username=root
+#kafka.eagle.password=123456
 
