[chg]提交更新文件

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -1,9 +1,9 @@
 ######################################
 # multi zookeeper&kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1,cluster2
-cluster1.zk.list=tdn1:2181,tdn2:2181,tdn3:2181
-cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
+kafka.eagle.zk.cluster.alias=cluster1
+cluster1.zk.list=3.106.11.103:21816
+#cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
 
 ######################################
 # zk client thread limit
