--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -3,12 +3,12 @@
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
 #cluster1.zk.list=dn1:2181,dn2:2181,dn3:2181
-cluster1.zk.list=127.0.0.1:2181
+cluster1.zk.list=3.106.11.103:21816
 
 ######################################
 # zk client thread limit
 ######################################
-kafka.zk.limit.size=25
+kafka.zk.limit.size=20
 
 ######################################
 # kafka eagle webui port
@@ -44,17 +44,17 @@ kafka.eagle.topic.token=keadmin
 ######################################
 # kafka sasl authenticate
 ######################################
-cluster1.kafka.eagle.sasl.enable=false
-cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
-cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
-cluster1.kafka.eagle.sasl.client.id=
+#cluster1.kafka.eagle.sasl.enable=false
+#cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+#cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
+#cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
+#cluster1.kafka.eagle.sasl.client.id=
 
-cluster2.kafka.eagle.sasl.enable=true
-cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster2.kafka.eagle.sasl.mechanism=PLAIN
-cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
-cluster2.kafka.eagle.sasl.client.id=
+cluster1.kafka.eagle.sasl.enable=true
+cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+cluster1.kafka.eagle.sasl.mechanism=PLAIN
+cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.ExtPlainLoginModule required username="admin" password="5Eqd/QwqPrurz1NEK7ne6w==:-TjqU1+utoE0EQfA";
+cluster1.kafka.eagle.sasl.client.id=
 
 ######################################
 # kafka jdbc driver address
@@ -68,8 +68,3 @@ kafka.eagle.password=123456
 #kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
 #kafka.eagle.username=root
 #kafka.eagle.password=123456
-
-kafka.eagle.driver=org.sqlite.JDBC
-kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-egale/kafka-eagle-web/src/main/resources/db/ke.db
-kafka.eagle.username=root
-kafka.eagle.password=root
