--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -57,16 +57,16 @@ cluster2.kafka.eagle.sasl.client.id=
 ######################################
 # kafka sqlite jdbc driver address
 ######################################
-kafka.eagle.driver=org.sqlite.JDBC
-kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
-kafka.eagle.username=root
-kafka.eagle.password=www.kafka-eagle.org
+#kafka.eagle.driver=org.sqlite.JDBC
+#kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
+#kafka.eagle.username=root
+#kafka.eagle.password=www.kafka-eagle.org
 
 ######################################
 # kafka mysql jdbc driver address
 ######################################
-#kafka.eagle.driver=com.mysql.jdbc.Driver
-#kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#kafka.eagle.username=root
-#kafka.eagle.password=123456
+kafka.eagle.driver=com.mysql.jdbc.Driver
+kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+kafka.eagle.username=root
+kafka.eagle.password=123456
 
