--- a/kafka-eagle-web/pom.xml
+++ b/kafka-eagle-web/pom.xml
@@ -13,7 +13,7 @@
 		<junit.version>4.11</junit.version>
 		<jdk.version>1.8</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>5.2.0.RELEASE</spring.version>
+		<spring.version>4.1.6.RELEASE</spring.version>
 		<mybatis.version>3.2.6</mybatis.version>
 		<shiro.version>1.3.2</shiro.version>
 		<jackson.version>2.10.0</jackson.version>
@@ -44,6 +44,11 @@
 			<groupId>org.smartloli.kafka.eagle</groupId>
 			<artifactId>kafka-eagle-core</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.huawei</groupId>
+			<artifactId>kafka-security</artifactId>
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.smartloli.kafka.eagle</groupId>
