--- a/kafka-eagle-api/pom.xml
+++ b/kafka-eagle-api/pom.xml
@@ -19,4 +19,16 @@
 			<version>2.4</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
