fix error when building with jdk1.8

--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,17 @@
 		<module>kafka-eagle-core</module>
 		<module>kafka-eagle-plugin</module>
 	</modules>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
