add cgroup topics

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -51,6 +51,8 @@ cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
 cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
 cluster1.kafka.eagle.sasl.client.id=
+cluster1.kafka.eagle.sasl.cgroup.enable=true
+cluster1.kafka.eagle.sasl.cgroup.topics=kafka20191230,kafka20191217
 
 cluster2.kafka.eagle.sasl.enable=true
 cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
