--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -47,12 +47,16 @@ cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
 cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="kafka" password="kafka-eagle";
 cluster1.kafka.eagle.sasl.client.id=
+cluster1.kafka.eagle.sasl.cgroup.enable=false
+cluster1.kafka.eagle.sasl.cgroup.topics=
 
 cluster2.kafka.eagle.sasl.enable=false
 cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster2.kafka.eagle.sasl.mechanism=PLAIN
 cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="kafka-eagle";
 cluster2.kafka.eagle.sasl.client.id=
+cluster2.kafka.eagle.sasl.cgroup.enable=false
+cluster2.kafka.eagle.sasl.cgroup.topics=
 
 ######################################
 # kafka sqlite jdbc driver address
