add broker mbean offline

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,11 +1,16 @@
 ######################################
-# multi zookeeper&kafka cluster list
+# multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=vmn4:2181
+
+######################################
+# broker size online list
+######################################
+cluster1.kafka.eagle.broker.size=0
 
 ######################################
 # zk client thread limit
