--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<project.version>1.4.3</project.version>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jdk.version>1.8</jdk.version>
 	</properties>
 
 	<modules>
@@ -22,4 +23,17 @@
 		<module>kafka-eagle-core</module>
 		<module>kafka-eagle-plugin</module>
 	</modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
