add topic spread and fixed zookeeper null value

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=127.0.0.1:2181
+cluster1.zk.list=dn1:2181
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=vmn4:2181
@@ -34,7 +34,7 @@ cluster4.kafka.eagle.offset.storage=kafka
 # kafka metrics, 30 days by default
 ######################################
 kafka.eagle.metrics.charts=true
-kafka.eagle.metrics.retain=30
+kafka.eagle.metrics.retain=15
 
 
 ######################################
@@ -59,7 +59,7 @@ cluster1.kafka.eagle.sasl.client.id=
 cluster1.kafka.eagle.sasl.cgroup.enable=false
 cluster1.kafka.eagle.sasl.cgroup.topics=kafka20191230,kafka20191217
 
-cluster2.kafka.eagle.sasl.enable=true
+cluster2.kafka.eagle.sasl.enable=false
 cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster2.kafka.eagle.sasl.mechanism=PLAIN
 cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
