add topic leader skewed

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,16 +1,17 @@
 ######################################
 # multi zookeeper & kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=dn1:2181
+kafka.eagle.zk.cluster.alias=cluster1,cluster4
+cluster1.zk.list=127.0.0.1:2181
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
-cluster4.zk.list=vmn4:2181
+cluster4.zk.list=dn1:2181
 
 ######################################
 # broker size online list
 ######################################
 cluster1.kafka.eagle.broker.size=10
+cluster4.kafka.eagle.broker.size=10
 
 ######################################
 # zk client thread limit
@@ -59,11 +60,11 @@ cluster1.kafka.eagle.sasl.client.id=
 cluster1.kafka.eagle.sasl.cgroup.enable=false
 cluster1.kafka.eagle.sasl.cgroup.topics=kafka20191230,kafka20191217
 
-cluster2.kafka.eagle.sasl.enable=false
-cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster2.kafka.eagle.sasl.mechanism=PLAIN
-cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
-cluster2.kafka.eagle.sasl.client.id=
+cluster4.kafka.eagle.sasl.enable=false
+cluster4.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+cluster4.kafka.eagle.sasl.mechanism=PLAIN
+cluster4.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
+cluster4.kafka.eagle.sasl.client.id=
 
 ######################################
 # kafka jdbc driver address
