add consumer history and offline data

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,8 +1,9 @@
 ######################################
 # multi zookeeper & kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1,cluster4
+kafka.eagle.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
+cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=dn1:2181
@@ -11,6 +12,7 @@ cluster4.zk.list=dn1:2181
 # broker size online list
 ######################################
 cluster1.kafka.eagle.broker.size=10
+cluster1_0_1.kafka.eagle.broker.size=10
 cluster4.kafka.eagle.broker.size=10
 
 ######################################
@@ -27,6 +29,7 @@ kafka.eagle.webui.port=8048
 # kafka offset storage
 ######################################
 cluster1.kafka.eagle.offset.storage=kafka
+cluster1_0_1.kafka.eagle.offset.storage=kafka
 cluster2.kafka.eagle.offset.storage=kafka
 #cluster3.kafka.eagle.offset.storage=kafka
 cluster4.kafka.eagle.offset.storage=kafka
