modify maven url

--- a/kafka-eagle-web/pom.xml
+++ b/kafka-eagle-web/pom.xml
@@ -24,7 +24,7 @@
 		<repository>
 			<id>nexus</id>
 			<name>nexus</name>
-			<url>http://central.maven.org/maven2/</url>
+			<url>https://repo1.maven.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
