add mail logger

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -45,7 +45,7 @@ kafka.eagle.metrics.retain=15
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
-kafka.eagle.sql.fix.error=false
+kafka.eagle.sql.fix.error=true
 
 ######################################
 # delete kafka topic token
