--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -64,6 +64,19 @@ cluster2.kafka.eagle.sasl.cgroup.enable=false
 cluster2.kafka.eagle.sasl.cgroup.topics=
 
 ######################################
+# kafka ssl authenticate
+######################################
+cluster3.kafka.eagle.ssl.enable=false
+cluster3.kafka.eagle.ssl.protocol=SSL
+cluster3.kafka.eagle.ssl.truststore.location=
+cluster3.kafka.eagle.ssl.truststore.password=
+cluster3.kafka.eagle.ssl.keystore.location=
+cluster3.kafka.eagle.ssl.keystore.password=
+cluster3.kafka.eagle.ssl.key.password=
+cluster3.kafka.eagle.ssl.cgroup.enable=false
+cluster3.kafka.eagle.ssl.cgroup.topics=
+
+######################################
 # kafka sqlite jdbc driver address
 ######################################
 kafka.eagle.driver=org.sqlite.JDBC
