Updata  local config

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,8 +2,8 @@
 # multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=127.0.0.1:2181
-cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
+cluster1.zk.list=10.100.173.206:2181,10.100.173.207:2181,10.100.173.208:2181
+#cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=dn1:2181
@@ -55,13 +55,14 @@ kafka.eagle.topic.token=keadmin
 ######################################
 # kafka sasl authenticate
 ######################################
-cluster1.kafka.eagle.sasl.enable=false
+cluster1.kafka.eagle.sasl.enable=true
 cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
-cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
+#cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
+cluster1.kafka.eagle.sasl.mechanism=PLAIN
+cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin_not_used_tcyx";
 cluster1.kafka.eagle.sasl.client.id=
 cluster1.kafka.eagle.sasl.cgroup.enable=false
-cluster1.kafka.eagle.sasl.cgroup.topics=kafka20191230,kafka20191217
+cluster1.kafka.eagle.sasl.cgroup.topics=
 
 cluster4.kafka.eagle.sasl.enable=false
 cluster4.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
@@ -73,8 +74,8 @@ cluster4.kafka.eagle.sasl.client.id=
 # kafka jdbc driver address
 ######################################
 kafka.eagle.driver=com.mysql.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-kafka.eagle.username=root
+kafka.eagle.url=jdbc:mysql://10.100.172.33:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+kafka.eagle.username=dev
 kafka.eagle.password=123456
 
 #kafka.eagle.driver=org.sqlite.JDBC
