--- a/kafka-eagle-web/pom.xml
+++ b/kafka-eagle-web/pom.xml
@@ -15,7 +15,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>5.2.0.RELEASE</spring.version>
 		<mybatis.version>3.5.3</mybatis.version>
-		<shiro.version>1.3.2</shiro.version>
+		<shiro.version>1.5.3</shiro.version>
 		<jackson.version>2.10.0</jackson.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -24,7 +24,7 @@
 		<repository>
 			<id>nexus</id>
 			<name>nexus</name>
-			<url>https://repo1.maven.org/maven2/</url>
+			<url>https://repo.spring.io/libs-snapshot/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
