--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>pom</packaging>
 	<version>1.4.7</version>
 	<name>ke</name>
-	<url>https://repo1.maven.org/maven2/</url>
+	<url>https://repo.spring.io/libs-snapshot/</url>
 
 	<properties>
 		<project.version>1.4.7</project.version>
