--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -24,6 +24,7 @@ kafka.zk.limit.size=25
 # kafka eagle webui port
 ######################################
 kafka.eagle.webui.port=8048
+kafka.eagle.i18n.language=en_US
 
 ######################################
 # kafka offset storage
