fixed zookeeper acl issues [#366]

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,12 +1,20 @@
 ######################################
 # multi zookeeper & kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1
+kafka.eagle.zk.cluster.alias=cluster1,cluster4
 cluster1.zk.list=127.0.0.1:2181
 cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
-cluster4.zk.list=dn1:2181
+cluster4.zk.list=127.0.0.1:2182
+
+######################################
+# zookeeper enable acl
+######################################
+cluster4.zk.acl.enable=true
+cluster4.zk.acl.schema=digest
+cluster4.zk.acl.username=test
+cluster4.zk.acl.password=test123
 
 ######################################
 # broker size online list
