--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -6,6 +6,14 @@ cluster1.zk.list=tdn1:2181,tdn2:2181,tdn3:2181
 cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
 
 ######################################
+# zookeeper enable acl
+######################################
+cluster4.zk.acl.enable=true
+cluster4.zk.acl.schema=digest
+cluster4.zk.acl.username=test
+cluster4.zk.acl.password=test123
+
+######################################
 # broker size online list
 ######################################
 cluster1.kafka.eagle.broker.size=20
