--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -8,10 +8,10 @@ cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
 ######################################
 # zookeeper enable acl
 ######################################
-cluster4.zk.acl.enable=true
-cluster4.zk.acl.schema=digest
-cluster4.zk.acl.username=test
-cluster4.zk.acl.password=test123
+cluster1.zk.acl.enable=false
+cluster1.zk.acl.schema=digest
+cluster1.zk.acl.username=test
+cluster1.zk.acl.password=test123
 
 ######################################
 # broker size online list
