--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,7 +1,7 @@
 ######################################
 # multi zookeeper & kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1,cluster4
+kafka.eagle.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
 cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
