fixed brokers metrics

--- a/kafka-eagle-web/pom.xml
+++ b/kafka-eagle-web/pom.xml
@@ -255,6 +255,9 @@
 					<exclude>conf/**</exclude>
 				</excludes>
 			</resource>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+			</resource>
 		</resources>
 	</build>
 </project>
