add master quartz

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -48,6 +48,10 @@ cluster4.kafka.eagle.offset.storage=kafka
 kafka.eagle.metrics.charts=true
 kafka.eagle.metrics.retain=15
 
+######################################
+# master quartz time
+######################################
+kafka.eagle.quartz.master.time=* */1 * * * ?
 
 ######################################
 # kafka sql topic records max
