update pom and fixed issues [#387]

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -52,7 +52,7 @@ kafka.eagle.metrics.retain=15
 # master quartz time
 ######################################
 kafka.eagle.quartz.master.time=* */1 * * * ?
-kafka.eagle.distributed.enable=true
+kafka.eagle.distributed.enable=false
 
 
 ######################################
