--- a/kafka-eagle-plugin/pom.xml
+++ b/kafka-eagle-plugin/pom.xml
@@ -14,9 +14,9 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>dom4j</groupId>
+			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
-			<version>1.6.1</version>
+			<version>2.1.3</version>
 		</dependency>
 	</dependencies>
 </project>
